# hf-fuyu

./: README.md  pyproject.toml
scripts/: upload.py
src/hf_fuyu/: __init__.py
src/hf_fuyu/model/: modeling_fuyu.py
tests/: test_model.py
tests/fixtures/: mock_dataset.py
